<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E959595"
    android:visibility="visible"
    tools:context=".AddRecipeActivity">

    <EditText
        android:id="@+id/newRecipeUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/blue_lighter"
        android:cursorVisible="true"
        android:ems="10"
        android:inputType="textUri"
        android:textColorHighlight="@color/blue_lighter"
        android:textColorLink="@color/blue_middle"
        android:textCursorDrawable="?android:attr/textCursorDrawable"
        android:textSize="24sp"
        android:typeface="monospace"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="257dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/str_url"
        android:textSize="20sp"
        android:typeface="monospace"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newRecipeName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="257dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/str_name"
        android:textSize="20sp"
        android:typeface="monospace"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newRecipeHeader" />

    <EditText
        android:id="@+id/newRecipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:backgroundTint="@color/blue_lighter"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/blue_lighter"
        android:textColorLink="@color/blue_middle"
        android:textSize="24sp"
        android:typeface="monospace"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/newRecipeHeader"
        android:layout_width="261dp"
        android:layout_height="45dp"
        android:text="@string/str_newRecipe"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#1565C0"
        android:onClick="saveRecipeAndNavigateBack"
        android:text="@string/str_save"
        android:textColor="#FFFFFF"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>